--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/JDBC_UAS
 endorsed.classpath=
 excludes=
 file.reference.JDBC_UAS-mysql-connector-j-8.0.32=mysql-connector-j-8.0.32
+file.reference.mysql-connector-j-8.0.32.jar=mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.JDBC_UAS-mysql-connector-j-8.0.32}:\
-    ${libs.Mysql_JDBC.classpath}
+    ${file.reference.mysql-connector-j-8.0.32.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -96,5 +97,6 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+source.reference.JDBC_UAS-mysql-connector-j-8.0.32=mysql-connector-j-8.0.32/mysql-connector-j-8.0.32.jar
 src.dir=src
 test.src.dir=test
